<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_white_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/contact_us" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_power_settings_new_24dp"
            android:title="@string/sign_out" />
    </group>

</menu>
