<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorPrimary"
    tools:context=".Forget_Password">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registered_emailid"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white_greyish"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/registered_sapid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_sap"
        android:drawablePadding="8dp"
        android:maxLength="11"
        android:gravity="center_vertical"
        android:hint="@string/registered_sap_id"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registered_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_message_white"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/registered_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/update_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_padlock"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/update_conf_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_padlock"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_greyish" />

    <CheckBox
        android:id="@+id/show_hide_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:text="@string/show_pwd"
        android:textColor="@color/white"
        android:onClick="onCheckboxClicked"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/backtoLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:elevation="8dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/forget_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:layout_weight="1"
            android:layout_marginStart="20dp"

            android:elevation="8dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>